<resources>
    <string name="app_name">bind</string>
    <string name="location_nav_item">位置</string>
    <string name="diary_nav_item">日记</string>
    <string name="watch_nav_item">一起看</string>
    <string name="my_nav_item">我的</string>
    <string name="account_hint">电子邮件</string>
    <string name="password_hint">密码</string>
    <string name="login_btn">登陆</string>
    <string name="to_register_btn">还没有账户？点此注册</string>
    <string name="register_btn">注册</string>
    <string name="ensure_password_hint">确认密码</string>
    <string name="gender_select_hint">性别</string>
    <string name="wrong_account_format">请输入正确的邮箱地址</string>
    <string name="wrong_ensure_password">两次输入的密码不一致</string>
    <string name="empty_account_error">邮箱地址不能为空</string>
    <string name="empty_password_error">密码不能为空</string>
    <string name="empty_ensure_password_error">请确认密码</string>
    <string name="empty_gender_error">请选择一个性别</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="binder">另一半</string>
    <string name="bind">绑定另一半</string>
    <string name="setting">设置</string>
    <string name="changeInfo">修改个人信息</string>
    <string name="logout">登出</string>
    <string name="unregister">注销当前账户</string>
    <string name="zeroTime">0:0</string>
    <string name="selectVideo">选择视频</string>
    <string name="inputDanmuku">输入弹幕</string>
    <string name="sendDanmaku">发送</string>
    <string name="submit">提交</string>
    <string name="userName">用户名</string>
    <string name="birthDayDefault">生日：</string>
    <string name="pickDate">选择日期</string>
    <string name="nickName">昵称</string>
    <string name="birthDay">生日</string>
    <string name="unBind">解绑</string>
    <string name="bindCode">bindCode</string>
    <string name="bindCodeHint">请输入绑定码</string>
    <string name="bindBtn">绑定</string>
    <string name="bindDis">请对方打开此页面并将绑定码告诉你，输入对方绑定码后点击绑定即可成功绑定</string>
    <string name="zeroDate">0</string>
    <string name="dateDefault">星期日</string>
    <string name="timeDefault">00:00</string>
    <string name="dateTimeDefault">2023–03–15</string>
    <string name="contentHintDefault">课题要政治方向正确，符合国家立德树人要求…</string>
    <string name="tripleDot">…</string>
    <string name="monthDefault">一月</string>
    <string name="yearAndMonthDefault">2023年，三月</string>
    <string name="dayAndTimeDefault">星期三 20:02</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="writeDiary">写日记</string>
    <string name="batteryDefault">80%</string>
    <string name="wifi">wifi</string>
    <string name="fourG">4G</string>
    <string name="fiveG">5G</string>
    <string name="zeroTempDegree">0℃</string>
</resources>