<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iconView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:scaleType="centerCrop"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:shapeAppearance="@style/CircleStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/diaryCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iconView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:strokeWidth="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zeroDate"
                android:textSize="40sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/dayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/dateDefault"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/dateText"
                app:layout_constraintStart_toStartOf="@+id/dateText"
                app:layout_constraintTop_toBottomOf="@id/dateText" />
            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/timeDefault"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/dateText"/>
            <TextView
                android:id="@+id/dateTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/dateTimeDefault"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/timeText"
                app:layout_constraintStart_toStartOf="@id/timeText"/>
            <TextView
                android:id="@+id/contentHintText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLength="13"
                android:textSize="12sp"
                android:text="@string/contentHintDefault"
                app:layout_constraintTop_toBottomOf="@id/dateTimeText"
                app:layout_constraintStart_toStartOf="@id/dateTimeText"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/tripleDot"
                app:layout_constraintStart_toEndOf="@id/contentHintText"
                app:layout_constraintTop_toTopOf="@id/contentHintText"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>