<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iconPicker"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="32dp"
        android:scaleType="centerCrop"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/CircleStyle" />
    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputOutlinedStyle"
        android:id="@+id/userNameInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/userName"
        app:startIconDrawable="@drawable/my_fill0_wght500_grad0_opsz24"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconPicker">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputOutlinedStyle"
        android:id="@+id/passwordInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/password_hint"
        app:startIconDrawable="@drawable/lock_fill0_wght500_grad0_opsz24"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameInputText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputOutlinedStyle"
        android:id="@+id/ensurePasswordInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/ensure_password_hint"
        app:startIconDrawable="@drawable/enhanced_encryption_fill0_wght500_grad0_opsz24"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInputText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/genderSelectInputText"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gender_select_hint"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ensurePasswordInputText"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/wc_fill0_wght500_grad0_opsz24">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/birthDayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthDayDefault"
        android:textSize="16sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/genderSelectInputText"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        style="@style/Widget.Material3.Button.IconButton"
        android:id="@+id/datePickBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/birthDayText"
        app:layout_constraintTop_toBottomOf="@id/genderSelectInputText"
        android:text="@string/pickDate"
        app:icon="@drawable/calendar_month_fill1_wght400_grad0_opsz48"/>

    <Button
        android:id="@+id/submitBtn"
        style="@style/Widget.Material3.Button.TonalButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderSelectInputText" />
</androidx.constraintlayout.widget.ConstraintLayout>