<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timeBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_primary90"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/yearAndMonthText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/yearAndMonthDefault"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zeroDate"
            android:textSize="48sp"
            app:layout_constraintTop_toBottomOf="@id/yearAndMonthText"
            app:layout_constraintStart_toStartOf="@id/yearAndMonthText"
            app:layout_constraintEnd_toEndOf="@id/yearAndMonthText"/>
        <TextView
            android:id="@+id/dayAndTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dayAndTimeDefault"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/dateText"
            app:layout_constraintStart_toStartOf="@id/dateText"
            app:layout_constraintEnd_toEndOf="@id/dateText"/>
        <Button
            style="@style/Widget.Material3.Button.IconButton"
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:icon="@drawable/close_fill1_wght400_grad0_opsz48"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/contentBlock"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@color/transparent"
        app:layout_constraintTop_toBottomOf="@id/timeBlock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/contentText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

    </androidx.core.widget.NestedScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/functionBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_primary90"
        app:layout_constraintTop_toBottomOf="@id/contentBlock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Button
            style="@style/Widget.Material3.Button.IconButton"
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:icon="@drawable/delete_fill1_wght400_grad0_opsz48"/>
        <Button
            style="@style/Widget.Material3.Button.IconButton"
            android:id="@+id/editBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:icon="@drawable/edit_fill1_wght400_grad0_opsz48"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>