<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/infoBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="192dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        app:strokeWidth="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/weatherIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/sunny_fill1_wght400_grad0_opsz48"
                android:tint="@color/material_dynamic_primary40"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/tempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zeroTempDegree"
                android:textSize="16sp"
                android:textColor="@color/material_dynamic_primary40"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/weatherIcon"
                app:layout_constraintBottom_toBottomOf="@id/weatherIcon"/>
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/batteryIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:tint="@color/material_dynamic_primary40"
                android:src="@drawable/battery_5_bar_fill0_wght400_grad0_opsz48"
                app:layout_constraintTop_toBottomOf="@id/weatherIcon"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/batteryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/batteryDefault"
                android:textColor="@color/material_dynamic_primary40"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/batteryIcon"
                app:layout_constraintTop_toTopOf="@id/batteryIcon"
                app:layout_constraintBottom_toBottomOf="@id/batteryIcon"/>
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/netConditionIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:tint="@color/material_dynamic_primary40"
                android:src="@drawable/wifi_fill1_wght400_grad0_opsz48"
                app:layout_constraintTop_toBottomOf="@id/batteryIcon"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/netConditionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi"
                android:textSize="16sp"
                android:textColor="@color/material_dynamic_primary40"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/netConditionIcon"
                app:layout_constraintTop_toTopOf="@id/netConditionIcon"
                app:layout_constraintBottom_toBottomOf="@id/netConditionIcon"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>